--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: root
+    password: 001805
     url: jdbc:mysql://localhost:3306/dsc
   jackson:
     date-format: yyyy-MM-dd hh:mm:ss
